--- a/views/upload.html
+++ b/views/upload.html
@@ -3,4 +3,4 @@
 <input type="file" name="ride">
 <input type="submit" class="btn" value="Submit" upload-submit="uploadComplete(content, completed)" />
 </form>
-<pre>Server Response: {{response | json}}</pre>
+<pre>Server Response: {{response}}</pre>
