Map Working, coordinates set at Chief Lunes Meet Spot

--- a/views/upload.html
+++ b/views/upload.html
@@ -4,3 +4,4 @@
 <input type="submit" class="btn" value="Submit" upload-submit="uploadComplete(content, completed)" />
 </form>
 <pre>Server Response: {{response}}</pre>
+<div id="map"></div>
