--- a/views/upload.html
+++ b/views/upload.html
@@ -1,4 +1,5 @@
 <h1>{{header}}</h1>
+<h2>{{name}}</h1>
 <div class="row-fluid">
 	<form name="uploadride" action="process/upload.php" ng-upload>
 		<input type="file" name="ride[]" multiple >
