--- a/views/view.html
+++ b/views/view.html
@@ -1,4 +1,5 @@
 <h1>{{header}}</h1>
 <hr>
-<input type="text" ng-model="name" ng-change="setRoute(name)" />
+<input type="text" ng-model="name" ng-change="setName(name)" />
 <div id="map"></div>
+<pre>{{routes}}</pre>
