--- a/views/view.html
+++ b/views/view.html
@@ -1,5 +1,6 @@
 <h1>{{header}}</h1>
 <hr>
 <input type="text" ng-model="name" ng-change="setName(name)" />
+<h2>Your Have {{numRoutes}} Routes</h2>
 <div id="map"></div>
 <pre>{{routes}}</pre>
