--- a/views/plan.html
+++ b/views/plan.html
@@ -1,1 +1,22 @@
 <h1>{{header}}</h1>
+<div class="row-fluid">
+	<button class="btn" ng-click="newRide()">Plan New Ride</button>
+</div>
+<div  ng-repeat="ride in plannedRides" class="well">
+	<div class="row-fluid">
+		<div class="span4"><h3>{{ride.name}}</h3></div>
+	</div>
+	<div class="row-fluid">
+		<input class="span3" type="text" ng-model="ride.name" placeholder="Ride Name" />
+		<input class="span3" type="date" ng-model="ride.date" />
+		<input class="span2" type="text" ng-model="ride.numOfRiders" placeholder="Number of Riders"/>
+	</div>
+	<div class="row-fluid">
+		<button ng-click="useRoute=!useRoute" class="btn">Use a Pre-defined Route?</button>
+		<div collapse="!useRoute">
+			Pick a route to use for this ride: 
+			<select ng-options="route for route in routenames" ng-model="ride.route"></select>
+		</div>
+	
+	</div>
+</div>
