--- a/views/upload.html
+++ b/views/upload.html
@@ -7,7 +7,10 @@
 	</form>
 </div>
 <div class="row-fluid">
-	<div id="map"></div>
+	<div ng-repeat="map in mapsId">
+		<h1>{{map}}</h1>
+		<div id="{{map}}" class="map"></div>
+	</div>
 </div>
 <div class="row-fluid">
 	<pre>Server Response: {{response}}</pre>
