--- a/views/view.html
+++ b/views/view.html
@@ -2,4 +2,4 @@
 <hr>
 <input type="text" ng-model="name" ng-change="setName(name)" />
 <h2>Your Have {{numRoutes}} Routes</h2>
-<div id="map"></div>
+<div class="map" id="map"></div>
