--- a/views/upload.html
+++ b/views/upload.html
@@ -9,11 +9,14 @@
 <div class="row-fluid">
 	<div ng-repeat="(map, name) in routeData">
 		<div style="float:left">
-			<h1><input type="text" ng-model="name.name" placeholder="{{name.name}}"/></h1>
+			<h1><input type="text" ng-model="name.name" placeholder="{{name.name}}" ng-change="saveName(map)"/></h1>
 			<div id="{{map}}" class="map" style="width:300px; height:300px;"></div>
 		</div>
 	</div>
 </div>
 <div class="row-fluid">
-	<pre>RouteData: {{routeData}}</pre>
+	<button ng-click="save()" class="btn btn-primary">Save</button>
+</div>	
+<div class="row-fluid">
+	<pre>RouteData: {{serverRoutes}}</pre>
 </div>
