--- a/views/plan.html
+++ b/views/plan.html
@@ -1,6 +1,6 @@
 <h1>{{header}}</h1>
 <div class="row-fluid">
-	<button class="btn" ng-click="newRide()">Plan New Ride</button>
+	<button class="btn" ng-click="newRide(); save();">Plan New Ride</button>
 </div>
 <div  ng-repeat="ride in plannedRides" class="well">
 	<div class="row-fluid">
@@ -17,5 +17,6 @@
 			Pick a route to use for this ride: 
 			<select ng-options="route for route in routenames" ng-model="ride.route"></select>
 		</div>
+		<button class="btn btn-primary" ng-click="save();">Save Plan</button>
 	</div>
 </div>
