Added elevation data: Climb, Descent and Net Gain

--- a/views/upload.html
+++ b/views/upload.html
@@ -11,6 +11,7 @@
 		<div style="float:left">
 			<h1><input type="text" ng-model="name.name" placeholder="{{name.name}}" ng-change="saveName(map)"/></h1>
 			<div id="{{map}}" class="map" style="width:300px; height:300px;"></div>
+			<div>Climb: {{name.climb}} Descent: {{name.descent}} Net Gain: {{name.gain}}</div>
 		</div>
 	</div>
 </div>
